Added searching(Not tested)
Проверь плз на работоспособность, потом скажешь что не так.
А то я забыл проверить а у меня все осталась та лажа из зо  которой
проект не может связатся с БД

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -56,6 +56,7 @@
             <div class="large-2 columns">
                 <ul class="side-nav categories tabs-nav" data-tab>
                     <li class="tab-title active" role="presentational" ><a href="#main" role="tab" tabindex="0" aria-selected="true" controls="main" class="translateMe"  data-tid="backToMain">Back to main</a></li>
+                    <!--<li class="tab-title" role="presentational" ><a href="#search" role="tab" tabindex="0" aria-selected="true" controls="Search" >Search</a></li>-->
                     <!--Adverts goes here-->
                 </ul>
             </div>
@@ -65,6 +66,10 @@
                     <section role="tabpanel" aria-hidden="false" class="content active" id="main">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula bibendum arcu vitae fringilla. Vivamus condimentum, elit nec malesuada consequat, ex arcu elementum nibh, a feugiat leo arcu sed lorem. Nam diam mauris, dictum ut eros id, dignissim egestas ligula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris elit nunc, pharetra non urna a, mattis porta eros. Integer consequat turpis vel placerat porttitor. Donec nec sapien lectus. Curabitur posuere odio diam, a blandit felis molestie sed. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam a mi auctor, mollis elit vel, egestas nisi.</p>
                     </section>
+                    <section role="tabpanel" aria-hidden="true" class="content" id="search">
+
+                    </section>
+
                 </div>
             </div>
         </div>
