--- a/www/static/index.html
+++ b/www/static/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title class="translateMe" data-tid="header">Kreved.co</title>
+        <title class="translateMe" data-tid="header">46.101.25.212</title>
         <link rel="stylesheet" type="text/css" href="css/foundation.css"/>
         <link rel="stylesheet" type="text/css" href="css/custom.css"/>
         <link rel="stylesheet" type="text/css" href="css/foundation-datepicker.css">
@@ -19,22 +19,12 @@
             </ul>
             <section class="top-bar-section">
                 <ul class="right">
-                    <!-- <li class="has-dropdown">
-                        <a href="#"><input type="text" placeholder="Search..."></a>
-                        <ul class="dropdown">
-                            <li><a href="#">Dropdown Option</a></li>
-                            <li><a href="#">Dropdown Option</a></li>
-                            <li><a href="#">Dropdown Option</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">See all &rarr;</a></li>
-                        </ul>
-                    </li> -->
                     <li class="divider"></li>
 
                     <li class="has-form">
                         <div class="row collapse">
                             <div class="large-12 small-9 columns">
-                                <input type="text" placeholder="Find Stuff">
+                                <input type="text" name="search" placeholder="Search">
                             </div>
                         </div>
                     </li>
@@ -43,8 +33,8 @@
                     <li><a href="#" class="translateMe" data-tid="newAdvert" data-reveal-id="newAdvert">New Advert</a></li>
                     <li class="divider"></li>
                     <li><a href="#" class="translateMe" data-tid="login" data-reveal-id="loginModal">Login</a></li>
-                     <li class="divider"></li>
-                     <li class="has-dropdown">
+                    <li class="divider"></li>
+                    <li class="has-dropdown">
                         <a href="#"><img src="img/globe.png"></a>
                         <ul class="dropdown languages"></ul>
                     </li>
@@ -66,10 +56,8 @@
                     <section role="tabpanel" aria-hidden="false" class="content active" id="main">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula bibendum arcu vitae fringilla. Vivamus condimentum, elit nec malesuada consequat, ex arcu elementum nibh, a feugiat leo arcu sed lorem. Nam diam mauris, dictum ut eros id, dignissim egestas ligula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris elit nunc, pharetra non urna a, mattis porta eros. Integer consequat turpis vel placerat porttitor. Donec nec sapien lectus. Curabitur posuere odio diam, a blandit felis molestie sed. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam a mi auctor, mollis elit vel, egestas nisi.</p>
                     </section>
-                    <section role="tabpanel" aria-hidden="true" class="content" id="search">
 
-                    </section>
-
+                    <section role="tabpanel" aria-hidden="true" class="content" id="search"></section>
                 </div>
             </div>
         </div>
