Added random adverts on the front page.

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -46,15 +46,14 @@
             <div class="large-2 columns">
                 <ul class="side-nav categories tabs-nav" data-tab>
                     <li class="tab-title active" role="presentational" ><a href="#main" role="tab" tabindex="0" aria-selected="true" controls="main" class="translateMe"  data-tid="backToMain">Back to main</a></li>
-                    <!--<li class="tab-title" role="presentational" ><a href="#search" role="tab" tabindex="0" aria-selected="true" controls="Search" >Search</a></li>-->
-                    <!--Adverts goes here-->
                 </ul>
             </div>
             <div class="large-10 columns">
                 <!-- TABS SECTION -->
                 <div class="tabs-content">
+
                     <section role="tabpanel" aria-hidden="false" class="content active" id="main">
-                        <p></p>
+                        <h3 class="text-center translateMe" data-tid="moto"></h3>
                     </section>
 
                     <section role="tabpanel" aria-hidden="true" class="content" id="search"></section>
@@ -111,7 +110,7 @@
                         <input type="text" tabindex="0" autocomplete="off" name="Email" data-type="email" data-sid="email">
                     </div>
 
-                    <div class="large-3 columns tr translateMe translateMe" data-tid="phone">Phone</div>
+                    <div class="large-3 columns tr translateMe" data-tid="phone">Phone</div>
                     <div class="large-9 columns">
                         <input type="text" tabindex="0" autocomplete="off" name="Number" data-type="number" data-sid="phone">
                     </div>
