Added input translation. Added search locale.

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -24,7 +24,7 @@
                     <li class="has-form">
                         <div class="row collapse">
                             <div class="large-12 small-9 columns">
-                                <input type="text" name="search" placeholder="Search">
+                                <input type="text" class="translateMe" data-tid="search" name="search" placeholder="Search">
                             </div>
                         </div>
                     </li>
