Fixed recursing html call eventing.

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -61,18 +61,18 @@
             </div>
         </div>
 
-
+        <input type="file" id="files" class="dropzone" data-eval="false" style="opacity:0"> 
+        
         <!--Modal NEW ADVERT form-->
         <div id="newAdvert" class="reveal-modal large" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
             <fieldset>
                 <legend class="translateMe" data-tid="newAdvert">New advert</legend>
-                <div class="large-5 columns dropzone parent">
-                    <div id="drop_zone" class="dropzone centered">
+                <div class="large-5 columns dropzone parent" id="drop_zone">
+                    <div class="dropzone centered">
                         <span class="dropzone text translateMe" data-tid="dropzone">
                             Drop your files here
                         </span>
                     </div>
-                    <input type="file" id="files" class="dropzone" data-eval="false" style="opacity:0"> 
                 </div>
                 <div class="large-7 columns">
 
