Added autoredirect if logged in.

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -32,7 +32,7 @@
                     <li class="divider"></li>
                     <li><a href="#" class="translateMe" data-tid="newAdvert" data-reveal-id="newAdvert">New Advert</a></li>
                     <li class="divider"></li>
-                    <li><a href="#" class="translateMe" data-tid="login" data-reveal-id="loginModal">Login</a></li>
+                    <li><a href="#" class="loginBtn translateMe" data-tid="login">Login</a></li>
                     <li class="divider"></li>
                     <li class="has-dropdown">
                         <a href="#"><img src="img/globe.png"></a>
