--- a/www/static/index.html
+++ b/www/static/index.html
@@ -15,7 +15,7 @@
         <div class="loading"></div>
         <nav class="top-bar" data-topbar>
             <ul class="title-area">
-                <li class="name"><h1><a href="#" class="translateMe" data-tid="header">Kreved.co</a></h1></li>
+                <li class="name"><h1><a href="#" class="translateMe" data-tid="header"></a></h1></li>
             </ul>
             <section class="top-bar-section">
                 <ul class="right">
