Renamed from krevedco to facv(freeadvertscv)

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -172,7 +172,7 @@
         <script type="text/javascript" src="js/vendor/jquery.js"></script>
         <script type="text/javascript" src="js/foundation.min.js"></script>
         <script type="text/javascript" src="js/foundation-datepicker.js"></script>
-        <script type="text/javascript" src="js/krevedco.jquery.js"></script>
+        <script type="text/javascript" src="js/facv.jquery.js"></script>
         <script type="text/javascript" src="js/sha512.js"></script>
 
         <script>
@@ -182,8 +182,8 @@
                         close_on_background_click: false
                     }
                 });
-                 
-                $('.tabs-content').krevedco({
+                
+                $('.tabs-content').facv({
                     links: '.tabs-nav'
                 });
 
