--- a/www/static/index.html
+++ b/www/static/index.html
@@ -1,5 +1,4 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
 <html class="no-js" lang="en" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
     <head>
